--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 /* body */
 
 body{
-    margin: 0px;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
