--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
+input {
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    outline-style: none;
+}
+
 /* navbar */
 
 .nav-top{
@@ -18,6 +24,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-shadow: 0 0 7px 1px rgb(104, 201, 233);
 
 }
 
@@ -98,7 +105,7 @@ header .logo{
     
 }
 .active{
-    background: #5ce1e6;
+    background: rgb(101, 215, 235);
 }
 
 .active:hover{
@@ -116,7 +123,7 @@ header .logo{
 
 /* Section */
 #Main_header_hero {
-    background-image: linear-gradient(to bottom, rgb(56, 201, 227), white);
+    background-image: linear-gradient(to bottom, rgb(101, 215, 235), white);
 }
 
 .input_col {
