--- a/security_page/security.css
+++ b/security_page/security.css
@@ -4,7 +4,7 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
     background: rgb(180, 219, 220,1);
 }
 
