--- a/How_it_Works_page/HIW_style.css
+++ b/How_it_Works_page/HIW_style.css
@@ -241,3 +241,10 @@ footer {
     padding-top: 30px;
     padding-left: 76px;
 }
+
+
+#active {
+    text-decoration: underline;
+    color: rgb(21, 168, 188);
+    text-underline-offset: 0.5rem;
+}
